--- a/bulk-phases/CO2/plot.ipynb
+++ b/bulk-phases/CO2/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,18 +46,24 @@
     "        subfolders.extend(fast_scandir(dirname))\n",
     "    return subfolders\n",
     "\n",
-    "def measure_isotherm(dirs, atoms = [\"CO2\"]):\n",
-    "    density_g_cm3= []\n",
+    "def measure_isotherm(dirs, atoms = [\"CO2\"], data_type = \"density\"):\n",
+    "    out_data = []\n",
     "    for dir in dirs:\n",
-    "        mean_density = 0\n",
+    "        mean_out = 0\n",
     "        for atom in atoms:\n",
-    "            density = np.loadtxt(dir+\"/density_\"+atom+\".dat\")[:,1]\n",
-    "            N_end = len(density)//50\n",
-    "            mean_density += np.mean(density[-N_end:]) # g/cm3\n",
-    "        density_g_cm3.append(mean_density)\n",
-    "    density_g_cm3 = np.array(density_g_cm3)\n",
-    "    density_g_cm3 *= ureg.gram/ureg.centimeter**3\n",
-    "    return density_g_cm3\n",
+    "            if data_type == \"density\":\n",
+    "                out = np.loadtxt(dir+\"/density_\"+atom+\".dat\")[:,1]\n",
+    "            elif data_type == \"pressure\":\n",
+    "                out = np.loadtxt(dir+\"/density_\"+atom+\".dat\")[:,1]\n",
+    "            N_end = len(out)//50\n",
+    "            mean_out += np.mean(out[-N_end:])\n",
+    "        out_data.append(mean_out)\n",
+    "    out_data = np.array(out_data)\n",
+    "    if data_type == \"density\":\n",
+    "        out_data *= ureg.gram/ureg.centimeter**3\n",
+    "    elif data_type == \"pressure\":\n",
+    "        out_data *= ureg.atm\n",
+    "    return out_data\n",
     "\n",
     "# Folder detector\n",
     "def scan_directory(dir_lammps):\n",
@@ -89,12 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "lammps_dir, lammps_mu_K = scan_directory(dir_lammps = True)\n",
-    "lammps_rho_g_cm3 = measure_isotherm(lammps_dir, atoms = [\"CO2\"])"
+    "lammps_rho_g_cm3 = measure_isotherm(lammps_dir, atoms = [\"CO2\"], data_type = \"density\")\n",
+    "lammps_p_atm = measure_isotherm(lammps_dir, atoms = [\"CO2\"], data_type = \"pressure\")"
    ]
   },
   {
@@ -106,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
