--- a/bulk-phases/CO2/plot-isotherm.ipynb
+++ b/bulk-phases/CO2/plot-isotherm.ipynb
@@ -210,7 +210,7 @@
    "source": [
     "# Literature\n",
     "\n",
-    "Bulk liquid density at 300 K: approx 760 kg/m3 = 0.76 g/cm3 from Harris ˇYung J. Phys. Chem. 99 1995"
+    "Bulk liquid density at 300 K: approx 760 kg/m3 = 0.76 g/cm3 from Harris Yung J. Phys. Chem. 99 1995"
    ]
   },
   {
@@ -338,28 +338,6 @@
     "    # Finish figure\n",
     "    # myplt.add_subplotlabels(type_label_panel = \"a\")\n",
     "    myplt.save_figure(filename = \"CO2-performance\", saving_path = './')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[3.20e+03, 2.85e+02, 2.50e+06],\n",
-       "       [2.80e+03, 2.67e+02, 2.50e+06],\n",
-       "       [3.00e+03, 2.77e+02, 2.50e+06]])"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "performance_lammps"
    ]
   }
  ],
